Fixing alignment of social icons

--- a/css/app.css
+++ b/css/app.css
@@ -15,6 +15,7 @@ body {
   height: 100%;
   float: left;
   position: relative;
+  min-height: 650px;
 }
 .black-bg {
   margin-left: 401px;
@@ -51,6 +52,7 @@ body {
   position: absolute;
   left: 0;
   right: 0;
+  bottom: 0;
   text-align: center;
   padding: 0 40px 40px 40px;
 }
